@@ -18,10 +18,6 @@
 
 #include <Interprete.h>
 
-
-/*! @brief Diametre_hyd_champ nom_pb champ affecte le champ champ au diametre hydraulique aux elements du domaine du probleme de nom_pb
- *
- */
 class Diametre_hyd_champ : public Interprete
 {
   Declare_instanciable(Diametre_hyd_champ);
@@ -29,7 +25,7 @@ public :
   Entree& interpreter(Entree&) override;
 };
 
-#endif
+#endif /* Diametre_hyd_champ_included */
 
 
 
