@@ -371,19 +371,6 @@ int Zone_VF::numero_face_local(int face, int elem) const
   return -1;
 }
 
-// remplissage des diametres hydrauliques
-void Zone_VF::calculer_diametres_hydrauliques()
-{
-  // les diametres hydrauliques valent 0
-  creer_tableau_faces(diametre_hydraulique_face_, Array_base::NOCOPY_NOINIT);
-  diametre_hydraulique_face_ = 0.;
-
-  // diametre_hydraulique_elem_.resize(0,Objet_U::dimension);
-  // Desormais diametre_hydraulique_elem_ scalaire
-  zone().creer_tableau_elements(diametre_hydraulique_elem_, Array_base::NOCOPY_NOINIT);
-  diametre_hydraulique_elem_ = 0.;
-}
-
 // remplissage des coefficients d'echange_thermique
 void Zone_VF::calculer_coefficient_echange_thermique()
 {
