@@ -108,22 +108,14 @@ void Discret_Thyd::critere_Q(const Zone_dis&, const Zone_Cl_dis&, const Champ_In
  * @param (Champ_Inc&)
  * @param (Champ_Fonc&)
  */
-void Discret_Thyd::diametre_hydraulique_elem(const Zone_dis& z, const Schema_Temps_base& sch, Champ_Fonc& ch) const
-{
-  Cerr << "Hydraulic diameter elem field discretization" << finl;
-  const Zone_VF& zone_VF = ref_cast(Zone_VF, z.valeur());
-  discretiser_champ("champ_elem", zone_VF, "diametre_hydraulique", "m", 1, sch.temps_courant(), ch);
-  Champ_Fonc_base& ch_fonc = ref_cast(Champ_Fonc_base, ch.valeur());
-  ch_fonc.valeurs().ref(zone_VF.diametre_hydraulique_elem());
-}
 
-void Discret_Thyd::diametre_hydraulique_face(const Zone_dis& z, const Schema_Temps_base& sch, Champ_Fonc& ch) const
+void Discret_Thyd::diametre_hydraulique_face(const Zone_dis& z,const DoubleVect& diam_face, const Schema_Temps_base& sch, Champ_Fonc& ch) const
 {
   Cerr << "Hydraulic diameter face field discretization" << finl;
   const Zone_VF& zone_VF = ref_cast(Zone_VF, z.valeur());
   discretiser_champ("champ_face", zone_VF, "diametre_hydraulique_face", "m", 1, sch.temps_courant(), ch);
   Champ_Fonc_base& ch_fonc = ref_cast(Champ_Fonc_base, ch.valeur());
-  ch_fonc.valeurs().ref(zone_VF.diametre_hydraulique_face());
+  ch_fonc.valeurs().ref(diam_face);
 }
 
 void Discret_Thyd::section_passage(const Zone_dis& z, const DoubleVect& section_passage_face, const Schema_Temps_base& sch, Champ_Fonc& ch) const
@@ -134,7 +126,6 @@ void Discret_Thyd::section_passage(const Zone_dis& z, const DoubleVect& section_
   Champ_Fonc_base& ch_fonc = ref_cast(Champ_Fonc_base, ch.valeur());
   DoubleVect& tab = ch_fonc.valeurs();
   tab.inject_array(section_passage_face);
-  //tab = zone_VF.section_passage_face();
 }
 
 void Discret_Thyd::y_plus(const Zone_dis&, const Zone_Cl_dis&, const Champ_Inc&, Champ_Fonc&) const
