@@ -206,9 +206,9 @@ void Flux_interfacial_PolyMAC::ajouter_blocs(matrices_t matrices, DoubleTab& sec
 
   for (e = 0; e < zone.nb_elem(); e++)
     {
-      //  double vol = pe(e) * ve(e), x, G = 0, dv_min = 0.1, dh = zone.diametre_hydraulique_elem()(e, 0), dP_G = 0.; // E. Saikali : initialise dP_G ici sinon fuite memoire ...
+      //  double vol = pe(e) * ve(e), x, G = 0, dv_min = 0.1, dh = milc.diametre_hydraulique_elem()(e, 0), dP_G = 0.; // E. Saikali : initialise dP_G ici sinon fuite memoire ...
       // PL ToDo: Uniformiser diametre_hydraulique_elem (vecteur) pour C3D et F5
-      double vol = pe(e) * ve(e), x, G = 0, dv_min = 0.1, dh = zone.diametre_hydraulique_elem()(e), dP_G = 0.; // E. Saikali : initialise dP_G ici sinon fuite memoire ...
+      double vol = pe(e) * ve(e), x, G = 0, dv_min = 0.1, dh = milc.diametre_hydraulique_elem()(e), dP_G = 0.; // E. Saikali : initialise dP_G ici sinon fuite memoire ...
       for (in.v = 0, d = 0; d < D; d++)
         for (n = 0; n < N; n++)
           in.v(n, d) = pvit(nf_tot + D * e + d, n);
