@@ -60,7 +60,6 @@ Read sch
 Associate pb dom
 Associate pb sch
 Discretize pb dis
-Diametre_hyd_champ pb champ_uniforme 1 0.25
 
 Read pb
 {
@@ -73,6 +72,7 @@ mu Champ_Uniforme 1 1.85e-5
     lambda Champ_Uniforme 1 0.0262
     Cp Champ_Uniforme 1 1006
     beta_th Champ_Uniforme 1 3.41e-3
+    Diametre_hyd_champ champ_uniforme 1 0.25
 }
 
 
